--- a/part2/docker-compose.yml
+++ b/part2/docker-compose.yml
@@ -1,13 +1,14 @@
+version: '3.9'
 services:
   api:
-    image: nathansegers/big_data_and_ai-24_may_api:versie1
+    image: melisaatis/big_data_and_ai-24_may_api:versie1
     build:
       context: ./api
       dockerfile: dockerfile
     ports:
       - 8001:80
   frontend:
-    image: nathansegers/big_data_and_ai-24_may_frontend:versie1
+    image: melisaatis/big_data_and_ai-24_may_frontend:versie1
     build:
       context: ./frontend
       dockerfile: Dockerfile
